Add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
+# ===============================
+# Python cache / compiled files
+# ===============================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# ===============================
+# Virtual environment
+# ===============================
 env/
-__*/
+venv/
+.venv/
+
+# ===============================
+# Environment variables
+# ===============================
+.env
+
+# ===============================
+# Database / local data files
+# ===============================
+*.db
+*.sqlite3
+
+# ===============================
+# IDE / Editor files
+# ===============================
+.vscode/
+.idea/
+
+# ===============================
+# OS generated files
+# ===============================
+.DS_Store
+Thumbs.db
+
+# ===============================
+# Logs
+# ===============================
+*.log
